--- a/TcpUdpTool/App.xaml
+++ b/TcpUdpTool/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="UdpTcpTool.App"
+﻿<Application x:Class="TcpUdpTool.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:UdpTcpTool"
+             xmlns:local="clr-namespace:TcpUdpTool"
              StartupUri="View/MainWindow.xaml">
     <Application.Resources>
          
