--- a/TcpUdpTool/View/HistoryView.xaml
+++ b/TcpUdpTool/View/HistoryView.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="UdpTcpTool.View.HistoryView"
+﻿<UserControl x:Class="TcpUdpTool.View.HistoryView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:UdpTcpTool.View"
+             xmlns:local="clr-namespace:TcpUdpTool.View"
              mc:Ignorable="d" >
     
     <GroupBox Header="Connected To: &lt;NONE&gt;">
