--- a/TcpUdpTool/View/MainWindow.xaml
+++ b/TcpUdpTool/View/MainWindow.xaml
@@ -1,13 +1,13 @@
-﻿<Window x:Class="UdpTcpTool.MainWindow"
+﻿<Window x:Class="TcpUdpTool.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:UdpTcpTool"
-        xmlns:viewmodel="clr-namespace:UdpTcpTool.ViewModel"
-        xmlns:view="clr-namespace:UdpTcpTool.View"
+        xmlns:local="clr-namespace:TcpUdpTool"
+        xmlns:viewmodel="clr-namespace:TcpUdpTool.ViewModel"
+        xmlns:view="clr-namespace:TcpUdpTool.View"
         mc:Ignorable="d"
-        Title="UdpTcpTool" Height="500" Width="450"
+        Title="TcpUdpTool" Height="500" Width="450"
         MinHeight="500" MinWidth="450"
         Background="#FFE8E8E8">
     <Grid>
