--- a/TcpUdpTool/View/TcpServerView.xaml
+++ b/TcpUdpTool/View/TcpServerView.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="UdpTcpTool.View.TcpServerView"
+﻿<UserControl x:Class="TcpUdpTool.View.TcpServerView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:UdpTcpTool.View"
-             xmlns:viewmodel="clr-namespace:UdpTcpTool.ViewModel"
+             xmlns:local="clr-namespace:TcpUdpTool.View"
+             xmlns:viewmodel="clr-namespace:TcpUdpTool.ViewModel.Presenter"
              mc:Ignorable="d" >
 
     <UserControl.DataContext>
