--- a/TcpUdpTool/View/UdpView.xaml
+++ b/TcpUdpTool/View/UdpView.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="UdpTcpTool.View.UdpView"
+﻿<UserControl x:Class="TcpUdpTool.View.UdpView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:UdpTcpTool.View"
+             xmlns:local="clr-namespace:TcpUdpTool.View"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
