--- a/TcpUdpTool/View/TcpClientView.xaml
+++ b/TcpUdpTool/View/TcpClientView.xaml
@@ -49,6 +49,7 @@
                          Grid.ColumnSpan="2"
                          Height="21"
                          VerticalAlignment="Center"
+                         VerticalContentAlignment="Center"
                          Text="{Binding IpAddress, UpdateSourceTrigger=PropertyChanged}"/>
 
                 <Label Grid.Row="1"
@@ -61,6 +62,7 @@
                          Grid.Column="1"
                          Height="21"
                          VerticalAlignment="Center"
+                         VerticalContentAlignment="Center"
                          Text="{Binding Port, UpdateSourceTrigger=PropertyChanged}" />
 
                 <Button Grid.Row="1"
@@ -110,6 +112,7 @@
                          MinHeight="21"
                          MaxHeight="50"
                          VerticalAlignment="Center"
+                         VerticalContentAlignment="Center"
                          AcceptsReturn="True"
                          ScrollViewer.VerticalScrollBarVisibility="Auto"
                          Text="{Binding Message, UpdateSourceTrigger=PropertyChanged}" />
