--- a/TcpUdpTool/View/TcpServerView.xaml
+++ b/TcpUdpTool/View/TcpServerView.xaml
@@ -10,19 +10,159 @@
     <UserControl.DataContext>
         <viewmodel:TcpServerPresenter />
     </UserControl.DataContext>
-    
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
             <RowDefinition />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
 
-        <TextBox Grid.Column="0"
-                 Grid.Row="0"
-                 Text="{Binding Test}" />
+        <GroupBox Header="Listen"
+                  Margin="10">
 
+            <Grid Grid.Row="0"
+                  Grid.Column="0"
+                  Margin="10 10 10 0">
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+
+                <Label Grid.Row="0"
+                       Grid.Column="0"
+                       Content="IP Address:"
+                       Padding="0"
+                       Margin="0 0 10 0"/>
+
+                <ComboBox Grid.Row="0"
+                         Grid.Column="1"           
+                         Grid.ColumnSpan="2"
+                         Height="21"
+                         VerticalAlignment="Center"
+                         IsEditable="True"
+                         Text="{Binding IpAddress, UpdateSourceTrigger=PropertyChanged}"/>
+
+                <Label Grid.Row="1"
+                       Grid.Column="0"
+                       Content="Port:"
+                       Padding="0"
+                       Margin="0 10 10 10" />
+
+                <TextBox Grid.Row="1"
+                         Grid.Column="1"
+                         Height="21"
+                         VerticalAlignment="Center"
+                         VerticalContentAlignment="Center"
+                         Text="{Binding Port, UpdateSourceTrigger=PropertyChanged}" />
+                
+                <Button Grid.Row="1"
+                        Grid.Column="2"
+                        Width="80"
+                        Height="21"
+                        VerticalAlignment="Center"
+                        Content="Start"
+                        Margin="10 10 0 10"
+                        Command="{Binding ConnectCommand}">
+                </Button>
+
+            </Grid>
+            
+        </GroupBox>
+
+        <local:HistoryView Grid.Column="0"
+                           Grid.Row="1"
+                           Margin="10 0 10 10" />
+
+
+        <GroupBox Header="Send"
+                  Grid.Column="0"
+                  Grid.Row="2"
+                  Margin="10 0 10 10"
+                  Padding="0 0 0 10">
+
+            <Grid Grid.Column="0"
+                  Grid.Row="1">
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+
+                <Label Grid.Column="0"
+                       Grid.Row="0"
+                       Content="Message:"
+                       Margin="10"
+                       Padding="0"
+                       VerticalAlignment="Center"/>
+
+                <TextBox Grid.Column="1"
+                         Grid.Row="0"
+                         MinHeight="21"
+                         MaxHeight="50"
+                         VerticalAlignment="Center"
+                         VerticalContentAlignment="Center"
+                         AcceptsReturn="True"
+                         ScrollViewer.VerticalScrollBarVisibility="Auto"
+                         Text="{Binding Message, UpdateSourceTrigger=PropertyChanged}" />
+
+                <Button Grid.Column="2"
+                        Grid.Row="0"
+                        Height="21"
+                        Width="80"
+                        Margin="10"
+                        Content="Send"
+                        Command="{Binding SendCommand}"
+                        IsEnabled="{Binding IsConnected}" />
+
+                <Label Grid.Column="0"
+                       Grid.Row="2"
+                       Padding="0"
+                       VerticalAlignment="Center"
+                       Margin="10 0 10 0"
+                       Content="Type:"/>
+
+                <StackPanel Grid.Column="1"
+                            Grid.Row="1"
+                            Orientation="Horizontal"
+                            VerticalAlignment="Center"
+                            Margin="0 2 0 0">
+
+                    <RadioButton Content="Text"
+                                 Margin="0 0 10 0"  />
+
+                    <RadioButton Content="Hex"
+                                 Margin="0 0 10 0" />
+                </StackPanel>
+
+                <Button Grid.Column="2"
+                        Grid.Row="1"
+                        Width="80"
+                        Height="21"
+                        Margin="10 0 10 0"
+                        Content="Disconnect"
+                        IsEnabled="{Binding IsClientConnected}"
+                        ToolTip="Force close the connection to the current client."/>
+
+            </Grid>
+
+        </GroupBox>
+        
     </Grid>
+    
 </UserControl>
