--- a/TcpUdpTool/View/MainWindow.xaml
+++ b/TcpUdpTool/View/MainWindow.xaml
@@ -29,7 +29,7 @@
             </TabItem>
 
             <TabItem Header="UDP">
-                
+                <view:UdpView />
             </TabItem>
 
             <TabItem Header="Settings">
