--- a/TcpUdpTool/View/UdpView.xaml
+++ b/TcpUdpTool/View/UdpView.xaml
@@ -4,9 +4,187 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TcpUdpTool.View"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             xmlns:viewmodel="clr-namespace:TcpUdpTool.ViewModel.Presenter"
+             mc:Ignorable="d">
+
+
+    <UserControl.DataContext>
+        <viewmodel:TcpServerPresenter />
+    </UserControl.DataContext>
+
     <Grid>
-            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+
+        <GroupBox Header="Listen"
+                  Margin="10">
+
+            <Grid Grid.Row="0"
+                  Grid.Column="0"
+                  Margin="10 10 10 0">
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+
+                <Label Grid.Row="0"
+                       Grid.Column="0"
+                       Content="IP Address:"
+                       Padding="0"
+                       Margin="0 0 10 0"/>
+
+                <ComboBox Grid.Row="0"
+                         Grid.Column="1"           
+                         Grid.ColumnSpan="2"
+                         Height="21"
+                         VerticalAlignment="Center"
+                         IsEditable="True"
+                         Text="{Binding IpAddress, UpdateSourceTrigger=PropertyChanged}"/>
+
+                <Label Grid.Row="1"
+                       Grid.Column="0"
+                       Content="Port:"
+                       Padding="0"
+                       Margin="0 10 10 10" />
+
+                <TextBox Grid.Row="1"
+                         Grid.Column="1"
+                         Height="21"
+                         VerticalAlignment="Center"
+                         VerticalContentAlignment="Center"
+                         Text="{Binding Port, UpdateSourceTrigger=PropertyChanged}" />
+
+                <Button Grid.Row="1"
+                        Grid.Column="2"
+                        Width="80"
+                        Height="21"
+                        VerticalAlignment="Center"
+                        Content="Start"
+                        Margin="10 10 0 10"
+                        Command="{Binding ConnectCommand}">
+                </Button>
+
+            </Grid>
+
+        </GroupBox>
+
+        <local:HistoryView Grid.Column="0"
+                           Grid.Row="1"
+                           Margin="10 0 10 10" />
+
+
+
+        <GroupBox Header="Send"
+                  Grid.Column="0"
+                  Grid.Row="2"
+                  Margin="10 0 10 10"
+                  Padding="0 0 0 10">
+
+            <Grid Grid.Column="0"
+                  Grid.Row="1">
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+
+                <Label Grid.Column="0"
+                       Grid.Row="0"
+                       Content="IP Address:"
+                       Margin="10"
+                       Padding="0"
+                       VerticalAlignment="Center" />
+
+                <TextBox Grid.Column="1"
+                         Grid.Row="0"
+                         Height="21"
+                         VerticalAlignment="Center"
+                         VerticalContentAlignment="Center" />
+
+                <Label Grid.Column="2"
+                       Grid.Row="0"
+                       Content="Port:"
+                       Margin="10 10 0 10"
+                       Padding="0"
+                       VerticalAlignment="Center" />
+
+                <TextBox Grid.Column="3"
+                         Grid.Row="0"
+                         Height="21"
+                         VerticalAlignment="Center"
+                         VerticalContentAlignment="Center"
+                         Margin="10 0 10 0"/>
+
+                <Label Grid.Column="0"
+                       Grid.Row="1"
+                       Content="Message:"
+                       Margin="10"
+                       Padding="0"
+                       VerticalAlignment="Center"/>
+
+                <TextBox Grid.Column="1"
+                         Grid.Row="1"
+                         Grid.ColumnSpan="2"
+                         MinHeight="21"
+                         MaxHeight="50"
+                         VerticalAlignment="Center"
+                         VerticalContentAlignment="Center"
+                         AcceptsReturn="True"
+                         ScrollViewer.VerticalScrollBarVisibility="Auto"
+                         Text="{Binding Message, UpdateSourceTrigger=PropertyChanged}" />
+
+                <Button Grid.Column="3"
+                        Grid.Row="1"                       
+                        Height="21"
+                        Width="80"
+                        Margin="10"
+                        Content="Send"
+                        Command="{Binding SendCommand}"
+                        IsEnabled="{Binding IsConnected}" />
+
+                <Label Grid.Column="0"
+                       Grid.Row="2"
+                       Padding="0"
+                       VerticalAlignment="Center"
+                       Margin="10 0 10 0"
+                       Content="Type:"/>
+
+                <StackPanel Grid.Column="1"
+                            Grid.Row="2"
+                            Orientation="Horizontal"
+                            VerticalAlignment="Center"
+                            Margin="0 2 0 0">
+
+                    <RadioButton Content="Text"
+                                 Margin="0 0 10 0"  />
+
+                    <RadioButton Content="Hex"
+                                 Margin="0 0 10 0" />
+                </StackPanel>
+
+            </Grid>
+
+        </GroupBox>
+
     </Grid>
+    
 </UserControl>
