--- a/TcpUdpTool/View/TcpClientView.xaml
+++ b/TcpUdpTool/View/TcpClientView.xaml
@@ -140,10 +140,16 @@
                             Margin="0 2 0 0">
 
                     <RadioButton Content="Text"
-                                 Margin="0 0 10 0"  />
+                                 Margin="0 0 10 0"
+                                 GroupName="SendType"
+                                 Command="{Binding SendTypeChangedCommand}"
+                                 IsChecked="{Binding PlainTextSendTypeSelected, Mode=TwoWay}"/>
 
                     <RadioButton Content="Hex"
-                                 Margin="0 0 10 0" />
+                                 Margin="0 0 10 0"
+                                 GroupName="SendType"
+                                 Command="{Binding SendTypeChangedCommand}"
+                                 IsChecked="{Binding HexSendTypeSelected, Mode=TwoWay}"/>
                 </StackPanel>
                 
             </Grid>
