--- a/TcpUdpTool/View/TcpServerView.xaml
+++ b/TcpUdpTool/View/TcpServerView.xaml
@@ -4,11 +4,11 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TcpUdpTool.View"
-             xmlns:viewmodel="clr-namespace:TcpUdpTool.ViewModel.Presenter"
+             xmlns:viewmodel="clr-namespace:TcpUdpTool.ViewModel"
              mc:Ignorable="d" >
 
     <UserControl.DataContext>
-        <viewmodel:TcpServerPresenter />
+        <viewmodel:TcpServerViewModel />
     </UserControl.DataContext>
 
     <Grid>
