using async await, ipv6 and multicastclient
- work on moving to using async and await instead of old Begin functions
for async communication.
- added ipv6 support to tcpclient and tcpserver (udpclientserver still
needs work)
- start on UdpMulticast, logic is working.

--- a/TcpUdpTool/View/TcpClientView.xaml
+++ b/TcpUdpTool/View/TcpClientView.xaml
@@ -75,12 +75,14 @@
                         Command="{Binding ConnectDisconnectCommand}">
                     <Button.Style>
                         <Style TargetType="Button">
+                            <Setter Property="Content" Value="Connect" />
                             <Style.Triggers>
                                 <DataTrigger Binding="{Binding IsConnected}" Value="True">
                                     <Setter Property="Content" Value="Disconnect" />
                                 </DataTrigger>
-                                <DataTrigger Binding="{Binding IsConnected}" Value="False">
-                                    <Setter Property="Content" Value="Connect" />
+                                <DataTrigger Binding="{Binding IsConnecting}" Value="True">
+                                    <Setter Property="Content" Value="..." />
+                                    <Setter Property="IsEnabled" Value="False" />
                                 </DataTrigger>
                             </Style.Triggers>
                         </Style>
