--- a/TcpUdpTool/View/UdpMulticastView.xaml
+++ b/TcpUdpTool/View/UdpMulticastView.xaml
@@ -9,7 +9,7 @@
              d:DesignHeight="300" d:DesignWidth="300">
 
     <UserControl.DataContext>
-        <viewmodel:UdpViewModel />
+        <viewmodel:UdpMulticastViewModel />
     </UserControl.DataContext>
 
     <Grid>
@@ -51,6 +51,7 @@
                          Grid.Column="1"           
                          Height="21"
                          VerticalAlignment="Center"
+                         VerticalContentAlignment="Center"
                          Text="{Binding MulticastGroup, UpdateSourceTrigger=PropertyChanged}"/>
                 
                 <Label Grid.Row="0"
@@ -64,7 +65,7 @@
                          Height="21"
                          VerticalAlignment="Center"
                          VerticalContentAlignment="Center"
-                         Text="{Binding Port, UpdateSourceTrigger=PropertyChanged}" />
+                         Text="{Binding MulticastPort, UpdateSourceTrigger=PropertyChanged}" />
 
 
                 <Label Grid.Column="0"
@@ -89,8 +90,17 @@
                         Height="21"
                         Margin="0 10 0 10"
                         VerticalAlignment="Center"
-                        Content="Join"
-                        Command="{Binding StartStopCommand}">
+                        Command="{Binding JoinLeaveCommand}">
+                    <Button.Style>
+                        <Style TargetType="Button">
+                            <Setter Property="Content" Value="Join" />
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding IsGroupJoined}" Value="True">
+                                    <Setter Property="Content" Value="Leave" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
                 </Button>
 
             </Grid>
@@ -138,7 +148,8 @@
                          Height="21"
                          Margin="0 10 0 10"
                          VerticalAlignment="Center"
-                         VerticalContentAlignment="Center" />
+                         VerticalContentAlignment="Center"
+                         Text="{Binding SendMulticastGroup, UpdateSourceTrigger=PropertyChanged}" />
 
                 <Label Grid.Column="2"
                        Grid.Row="0"
@@ -152,7 +163,8 @@
                          Height="21"
                          VerticalAlignment="Center"
                          VerticalContentAlignment="Center"
-                         Margin="10"/>
+                         Margin="10" 
+                         Text="{Binding SendMulticastPort, UpdateSourceTrigger=PropertyChanged}"/>
 
                 <Label Grid.Column="0"
                        Grid.Row="1"
@@ -166,7 +178,7 @@
                           Grid.Row="1"
                           Grid.ColumnSpan="3"
                           Height="21"
-                          Text="All"
+                          Text="Default"
                           Margin="0 0 10 8"/>
 
                 <Label Grid.Column="0"
@@ -210,10 +222,14 @@
                             Margin="0 2 0 0">
 
                     <RadioButton Content="Text"
-                                 Margin="0 0 10 0"  />
+                                 Margin="0 0 10 0" 
+                                 Command="{Binding SendTypeChangedCommand}"
+                                 IsChecked="{Binding PlainTextSendTypeSelected, Mode=TwoWay}" />
 
                     <RadioButton Content="Hex"
-                                 Margin="0 0 10 0" />
+                                 Margin="0 0 10 0"
+                                 Command="{Binding SendTypeChangedCommand}"
+                                 IsChecked="{Binding HexSendTypeSelected, Mode=TwoWay}" />
                 </StackPanel>
 
             </Grid>
