--- a/TcpUdpTool/View/UdpView.xaml
+++ b/TcpUdpTool/View/UdpView.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TcpUdpTool.View"
              xmlns:viewmodel="clr-namespace:TcpUdpTool.ViewModel"
@@ -11,6 +12,14 @@
     <UserControl.DataContext>
         <viewmodel:UdpViewModel />
     </UserControl.DataContext>
+
+    <UserControl.Resources>
+        <CollectionViewSource x:Key="SortedLocalInterfaces" Source="{Binding LocalInterfaces}">
+            <CollectionViewSource.SortDescriptions>
+                <scm:SortDescription PropertyName="" Direction="Ascending" />
+            </CollectionViewSource.SortDescriptions>
+        </CollectionViewSource>
+    </UserControl.Resources>
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -50,8 +59,8 @@
                          Grid.ColumnSpan="2"
                          Height="21"
                          VerticalAlignment="Center"
-                         IsEditable="True"
-                         Text="{Binding ListenIpAddress, UpdateSourceTrigger=PropertyChanged}"/>
+                         ItemsSource="{Binding Source={StaticResource SortedLocalInterfaces}}"
+                         SelectedItem="{Binding SelectedInterface}"/>
 
                 <Label Grid.Row="1"
                        Grid.Column="0"
