--- a/TcpUdpTool/View/UdpMulticastView.xaml
+++ b/TcpUdpTool/View/UdpMulticastView.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TcpUdpTool.View"
              xmlns:viewmodel="clr-namespace:TcpUdpTool.ViewModel"
@@ -11,6 +12,19 @@
     <UserControl.DataContext>
         <viewmodel:UdpMulticastViewModel />
     </UserControl.DataContext>
+
+    <UserControl.Resources>
+        <CollectionViewSource x:Key="SortedListenInterfaces" Source="{Binding LocalInterfaces}">
+            <CollectionViewSource.SortDescriptions>
+                <scm:SortDescription PropertyName="" Direction="Ascending" />
+            </CollectionViewSource.SortDescriptions>
+        </CollectionViewSource>
+        <CollectionViewSource x:Key="SortedSendInterfaces" Source="{Binding LocalInterfaces}">
+            <CollectionViewSource.SortDescriptions>
+                <scm:SortDescription PropertyName="" Direction="Ascending" />
+            </CollectionViewSource.SortDescriptions>
+        </CollectionViewSource>
+    </UserControl.Resources>
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -81,7 +95,8 @@
                           Height="21"
                           VerticalAlignment="Center"
                           Margin="0 0 10 0"
-                          Text="All" />
+                          ItemsSource="{Binding Source={StaticResource SortedListenInterfaces}}"
+                          SelectedItem="{Binding SelectedListenInterface}"/>
 
 
                 <Button Grid.Row="1"
@@ -179,7 +194,9 @@
                           Grid.ColumnSpan="3"
                           Height="21"
                           Text="Default"
-                          Margin="0 0 10 8"/>
+                          Margin="0 0 10 8"
+                          ItemsSource="{Binding Source={StaticResource SortedSendInterfaces}}"
+                          SelectedItem="{Binding SelectedSendInterface}" />
 
                 <Label Grid.Column="0"
                        Grid.Row="2"
