--- a/TcpUdpTool/View/UdpMulticastView.xaml
+++ b/TcpUdpTool/View/UdpMulticastView.xaml
@@ -94,6 +94,8 @@
                           Grid.ColumnSpan="2"
                           Height="21"
                           VerticalAlignment="Center"
+                          IsEditable="True"
+                          IsReadOnly="True"
                           Margin="0 0 10 0"
                           ItemsSource="{Binding Source={StaticResource SortedListenInterfaces}}"
                           SelectedItem="{Binding SelectedListenInterface}"/>
@@ -195,6 +197,8 @@
                           Height="21"
                           Text="Default"
                           Margin="0 0 10 8"
+                          IsEditable="True"
+                          IsReadOnly="True"
                           ItemsSource="{Binding Source={StaticResource SortedSendInterfaces}}"
                           SelectedItem="{Binding SelectedSendInterface}" />
 
