settings added for ipv6, hitory length and encoding

--- a/TcpUdpTool/View/MainWindow.xaml
+++ b/TcpUdpTool/View/MainWindow.xaml
@@ -37,7 +37,7 @@
             </TabItem>
 
             <TabItem Header="Settings">
-                
+                <view:SettingsView />
             </TabItem>
             
             <TabItem Header="Help">
