--- a/TcpUdpTool/View/UdpMulticastView.xaml
+++ b/TcpUdpTool/View/UdpMulticastView.xaml
@@ -231,6 +231,7 @@
 
                 <Label Grid.Column="0"
                        Grid.Row="3"
+                       Height="21"
                        Padding="0"
                        VerticalAlignment="Center"
                        Margin="10 0 10 0"
@@ -239,8 +240,7 @@
                 <StackPanel Grid.Column="1"
                             Grid.Row="3"
                             Orientation="Horizontal"
-                            VerticalAlignment="Center"
-                            Margin="0 2 0 0">
+                            VerticalAlignment="Center">
 
                     <RadioButton Content="Text"
                                  Margin="0 0 10 0" 
