--- a/TcpUdpTool/View/SettingsView.xaml
+++ b/TcpUdpTool/View/SettingsView.xaml
@@ -4,9 +4,110 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TcpUdpTool.View"
+             xmlns:viewmodel="clr-namespace:TcpUdpTool.ViewModel"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-            
+
+    <UserControl.DataContext>
+        <viewmodel:SettingsViewModel />
+    </UserControl.DataContext>
+
+    <Grid Margin="10">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+
+        <GroupBox Header="General" 
+                  Grid.ColumnSpan="3"
+                  Grid.Row="0"
+                  Padding="5">
+
+            <Grid>
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="100" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                
+                              
+                <Label Grid.Column="0"
+                       Grid.Row="0"
+                       Content="Encoding:" />
+
+                <ComboBox Grid.Column="1"
+                          Grid.Row="0"
+                          Height="21"
+                          Width="200"
+                          VerticalContentAlignment="Center"
+                          ItemsSource="{Binding Encodings}"
+                          SelectedItem="{Binding SelectedEncoding}"/>
+
+                <Label Grid.Column="0"
+                       Grid.Row="1"
+                       Content="IPv6 Support:" />
+
+                <StackPanel Grid.Column="1"
+                            Grid.Row="1"
+                            Orientation="Horizontal"
+                            VerticalAlignment="Center"
+                            Margin="0 2 0 0">
+
+                    <RadioButton Content="Enable" 
+                                 IsChecked="{Binding IPv6SupportEnabled, Mode=TwoWay}"/>
+                    <RadioButton Content="Disable"
+                                 Margin="10 0 0 0"
+                                 IsChecked="{Binding IPv6SupportDisabled, Mode=OneWay}"/>
+
+                </StackPanel>
+                              
+            </Grid>
+        </GroupBox>
+
+        <GroupBox Header="History"
+                  Grid.Column="0"
+                  Grid.Row="1"
+                  Grid.ColumnSpan="3"
+                  Margin="0 10 0 0"
+                  Padding="5">
+
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="100" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <Label Grid.Column="0"
+                       Grid.Row="0"
+                       Content="Show:" />
+                
+                <TextBox Grid.Column="1"
+                         Grid.Row="0"
+                         Width="40"
+                         Height="20"
+                         VerticalContentAlignment="Center"
+                         Text="{Binding HistoryEntries, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+
+                <Label Grid.Column="2"
+                       Grid.Row="0"
+                       Content="entries" />
+
+            </Grid>
+        </GroupBox>
+        
     </Grid>
+       
 </UserControl>
