--- a/TcpUdpTool/View/TcpClientView.xaml
+++ b/TcpUdpTool/View/TcpClientView.xaml
@@ -144,6 +144,7 @@
                 <Label Grid.Column="0"
                        Grid.Row="1"
                        Padding="0"
+                       Height="21"
                        VerticalAlignment="Center"
                        Margin="10 0 10 0"
                        Content="Type:"/>
@@ -152,7 +153,7 @@
                             Grid.Row="1"
                             Orientation="Horizontal"
                             VerticalAlignment="Center"
-                            Margin="0 2 0 0">
+                            Margin="0 0 0 0">
 
                     <RadioButton Content="Text"
                                  Margin="0 0 10 0"
