--- a/TcpUdpTool/View/TcpServerView.xaml
+++ b/TcpUdpTool/View/TcpServerView.xaml
@@ -156,6 +156,7 @@
 
                 <Label Grid.Column="0"
                        Grid.Row="1"
+                       Height="21"
                        Padding="0"
                        VerticalAlignment="Center"
                        Margin="10 0 10 0"
@@ -164,8 +165,7 @@
                 <StackPanel Grid.Column="1"
                             Grid.Row="1"
                             Orientation="Horizontal"
-                            VerticalAlignment="Center"
-                            Margin="0 2 0 0">
+                            VerticalAlignment="Center">
 
                     <RadioButton Content="Text"
                                  Margin="0 0 10 0"
