added help view

--- a/TcpUdpTool/View/MainWindow.xaml
+++ b/TcpUdpTool/View/MainWindow.xaml
@@ -41,7 +41,7 @@
             </TabItem>
             
             <TabItem Header="Help">
-
+                <view:HelpView />
             </TabItem>
         </TabControl>
             
