--- a/TcpUdpTool/View/HelpView.xaml
+++ b/TcpUdpTool/View/HelpView.xaml
@@ -7,6 +7,16 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition />
+        </Grid.RowDefinitions>
+
+        <WebBrowser x:Name="HelpBrowser"
+                    Grid.Column="0"
+                    Grid.Row="0" />
+
     </Grid>
 </UserControl>
