--- a/TcpUdpTool/View/TcpClientView.xaml
+++ b/TcpUdpTool/View/TcpClientView.xaml
@@ -50,7 +50,7 @@
                          Height="21"
                          VerticalAlignment="Center"
                          VerticalContentAlignment="Center"
-                         Text="{Binding IpAddress, UpdateSourceTrigger=PropertyChanged}"/>
+                         Text="{Binding IpAddress, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, NotifyOnValidationError=True}"/>
 
                 <Label Grid.Row="1"
                        Grid.Column="0"
@@ -63,7 +63,7 @@
                          Height="21"
                          VerticalAlignment="Center"
                          VerticalContentAlignment="Center"
-                         Text="{Binding Port, UpdateSourceTrigger=PropertyChanged}" />
+                         Text="{Binding Port, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, NotifyOnValidationError=True}" />
 
                 <Button Grid.Row="1"
                         Grid.Column="2"
