--- a/TcpUdpTool/View/TcpServerView.xaml
+++ b/TcpUdpTool/View/TcpServerView.xaml
@@ -77,7 +77,7 @@
                          Height="21"
                          VerticalAlignment="Center"
                          VerticalContentAlignment="Center"
-                         Text="{Binding Port, UpdateSourceTrigger=PropertyChanged}" />
+                         Text="{Binding Port, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, NotifyOnValidationError=True}" />
                 
                 <Button Grid.Row="1"
                         Grid.Column="2"
